--- a/index.html
+++ b/index.html
@@ -5,28 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    <link rel="stylesheet" href="cal.css">
+    <link rel="stylesheet" href="cal1.css">
+    
 </head>
 <body>
-    <div class="wrapper">
-        <div class="item1">0.00</div>
-        <div class="item2">AC</div>
-        <div class="item3">0</div>
-        <div class="item4">/</div>
-        <div class="item5">X</div>
-        <div class="item6">7</div>
-        <div class="item7">8</div>
-        <div class="item8">9</div>
-        <div class="item9">-</div>
-        <div class="item10">4</div>
-        <div class="item11">5</div>
-        <div class="item12">6</div>
-        <div class="item13">+</div>
-        <div class="item14">3</div>
-        <div class="item15">2</div>
-        <div class="item16">1</div>
-        <div class="item17">=</div>
+    <div class="mainparent">
+
+        <div id="result" class="result">0.00</div>
+        <section class="items">
+            <button class="clear">AC</button>
+            <button class="clean">C</button>
+            <button class="divide">/</button>
+            <button class="multi">*</button>
+            <button class="eight">8</button>
+            <button class="seven">7</button>
+            <button class="nine">9</button>
+            <button class="zero">0</button>
+            <button class="minus">-</button>
+            <button class="four">4</button>
+            <button class="five">5</button>
+            <button class="six">6</button>
+            <button class="add">+</button>
+            <button class="three">3</button>
+            <button class="two">2</button>
+            <button class="one">1</button>
+            <button class="ans">=</button>
+            <button class="OFF">OFF</button>
+        </section>
     </div>
-    
+    <script src="cal.js"></script>
 </body>
 </html>
